<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_large"
    tools:context=".ReferEarnFragment">

    <ImageView
        android:id="@+id/icon_gift"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:contentDescription="@string/refer_earn_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_refer_earn"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/refer_earn_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_gift" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:text="@string/refer_earn_description"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <TextView
        android:id="@+id/referral_code_text"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:paddingHorizontal="48dp"
        android:text="@string/your_referral_code"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toStartOf="@+id/copy_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text" />

    <ImageButton
        android:id="@+id/copy_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/copy_referral_code"
        android:paddingHorizontal="@dimen/spacing_medium"
        app:layout_constraintBottom_toBottomOf="@id/referral_code_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/referral_code_text"
        app:layout_constraintTop_toTopOf="@id/referral_code_text"
        app:srcCompat="@drawable/ic_copy"
        app:tint="?attr/colorPrimary" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/code_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="referral_code_text,copy_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/share_now"
        app:icon="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="@id/referral_code_text"
        app:layout_constraintStart_toStartOf="@id/referral_code_text"
        app:layout_constraintTop_toBottomOf="@id/code_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>